# ASM_IDE

./: README.md  asm_ide (kópia)  hello  simple_gl.asm  test.asm
asm_ide/: CMakeLists.txt  assembly.c  assembly.h  gtk_gui.h  main.c
build-asm_ide-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  asm_ide  build.ninja  cmake_install.cmake
build-asm_ide-Desktop-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-82323d46f94c31b9e1cb.json  codemodel-v2-2485a008e8576a7d57f5.json  codemodel-v2-391803283c59e8958534.json  codemodel-v2-420cb178239db1d5c37e.json  index-2024-06-28T20-16-44-0576.json  index-2024-07-07T11-43-51-0627.json  index-2024-07-07T12-50-04-0006.json  target-asm_ide-Debug-65349b3cb68d063722b8.json  target-asm_ide-Debug-6723df1c056c9d3df1cb.json
build-asm_ide-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-96fbdb12d004ae8d9357.json  cmakeFiles-v1-4619f442b62a337597f4.json  codemodel-v2-2cde895227b6d98a1340.json  codemodel-v2-b2a7be39f73648ca33dc.json  codemodel-v2-b311b00f3e98528b7bed.json  index-2024-06-28T20-16-22-0347.json  index-2024-07-07T11-40-55-0747.json  index-2024-07-07T12-40-27-0473.json  target-asm_ide-Debug-3ba760d2d7091362d639.json  target-asm_ide-Debug-bbb531950a9479115c40.json  target-asm_ide-Debug-c9f62a11bcf965b7edff.json
